--- a/package.json
+++ b/package.json
@@ -39,5 +39,10 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "husky": "^7.0.2",
+    "lint-staged": "^11.2.0",
+    "pretier": "0.0.1"
   }
 }
