--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     ]
   },
   "devDependencies": {
+    "eslint": "^7.32.0",
     "husky": "^7.0.2",
     "lint-staged": "^11.2.0",
     "pretier": "0.0.1"
